--- a/css/hu-ica4.css
+++ b/css/hu-ica4.css
@@ -7,14 +7,20 @@ body {
   }
 
   h1 {
-    color: #375e97;
+    color: hotpink;
     font-size: 2em;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    border-bottom: 1px solid #375e97;
+    border-bottom: 10px dotted purple;
   }
 
   h2 {
-    font-size: 1.5em;
+    font-size: 1.5em; font-style: italic;
+  }
+
+  ul{
+    background-color: #eeeeee;
+    border: 5px solid purple;
+    padding: 2% 4%;
   }
 
   .job-title {
@@ -29,4 +35,5 @@ body {
 
   a:hover {
     text-decoration: none;
+    color: green;
   }
