--- a/css/hu-wa4.css
+++ b/css/hu-wa4.css
@@ -1,4 +1,4 @@
-/* General styles for the business card webpage. */  
+/* General styles for the business card webpage! */  
   
   body{
     margin: 0;
@@ -6,7 +6,7 @@
   html{
     font-family: 'Helvetica neue', Arial, 'sans serif';
     font-size: 10px;
-    background-color: #ccc;
+    background-color: #ffffff;
   }
   h2{
     font-size: 20px;
@@ -23,20 +23,41 @@
     border: 0.2em solid black;
     border-radius: 1.5em;
   }
+  .card2{
+    width: 35em;
+    height: 22em;
+    margin: 5em auto;
+    background-color: mistyrose;
+    border: 0.2em solid black;
+    border-radius: 1.5em;
+  }
   .card_header{
     background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
     border-radius: 0 0 1.5em 1.5em;
+  }
+  .card_header2{
+    height: 30px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 0 0 1.5em 1.5em;
+    font-family:monospace;
   }
   article{
     height: 120px;
     background-color: rgba(0,0,0,0.4);
     padding: 3px;
   }
-  .card_article_img{
-    max-height: 100%;
-    float: right;
+  .card_article2{
+    height: 120px;
+    background-color: lightpink;
+    padding: 3px;
   }
   .card_article_text{
+    color: white;
+    padding: 5px;
+    line-height: 15px;
+  }
+  .card_article_text2{
+    font-family:monospace;
     color: white;
     padding: 5px;
     line-height: 15px;
@@ -49,7 +70,21 @@
     font-size: 15px;
     line-height: 20px;
   }
+  .card_footer2{
+    border-radius: 1.5em 1.5em 0 0;
+    height: 30px;
+    padding: 10px 10px 10px 10px;
+  }
+  .card_footer2 p{
+    font-family:monospace;
+    font-size: 15px;
+    line-height: 20px;
+  }
   .card_header, .card_footer{
     height: 30px;
     padding: 10px 10px 10px 10px;
+  }
+  .card_article_img{
+    max-height: 100%;
+    float: right;
   }
