--- a/css/hu-wa5.css
+++ b/css/hu-wa5.css
@@ -15,6 +15,7 @@ body{
 }
 .logo img{
   position: absolute;
+  filter: drop-shadow(5px 5px 3px #ffffff);
   top: 50px;
   left: 10px;
   max-height: auto;
