--- a/css/hu-wa6.css
+++ b/css/hu-wa6.css
@@ -1,69 +1,70 @@
-body{
-    background-color: #fff;
-    color: #333;
-    margin: 0;
-    font: 1.2em / 1.2 Arial, Helvetica, sans-serif;
+@media screen and (min-width: 500px){
+    body{
+        background-color: #fff;
+        color: #333;
+        margin: 0;
+        font: 1.2em / 1.2 Arial, Helvetica, sans-serif;
+    }
+    p{
+        text-align: justify;
+    }
+    img{
+        max-width: 100%;
+        display: block;
+    } 
+    .logo{
+        font-size: 200%;
+        padding: 50px 20px;
+        position: relative;
+        max-width: 980px;
+    }
+    .grid{
+        margin: 0 auto;
+        padding: 0 20px;
+        display: flex;
+        flex-direction: row;
+    }
+    .child1{
+        width: 60%;
+        height: 100vh;
+        padding: 20px;
+    }
+    .child2{
+        width: 40%;
+        height: 100vh;
+    }
+    nav{
+        background-color: #000;
+        padding: .5em;
+    }
+    nav ul{
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: nowrap;
+        list-style: none;
+    } 
+    nav a{
+        color: #fff;
+        text-decoration: none;
+        padding: .25em .5em;
+    } 
+    .photos{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        column-gap: 1px;
+        row-gap: 1px;
+    }
+    .feature{
+        float: left;
+        padding: 10px;
+        width: 200px;
+    }
 }
-p{
-    text-align: justify;
-}
-img{
-    max-width: 100%;
-    display: block;
-} 
-.logo{
-    font-size: 200%;
-    padding: 50px 20px;
-    position: relative;
-    max-width: 980px;
-}
-.grid{
-    margin: 0 auto;
-    padding: 0 20px;
-    display: flex;
-    flex-direction: row;
-}
-.child1{
-    width: 60%;
-    height: 100vh;
-    padding: 20px;
-}
-.child2{
-    width: 40%;
-    height: 100vh;
-}
-nav{
-    background-color: #000;
-    padding: .5em;
-}
-nav ul{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    list-style: none;
-} 
-nav a{
-    color: #fff;
-    text-decoration: none;
-    padding: .25em .5em;
-} 
-.photos{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    column-gap: 1px;
-    row-gap: 1px;
-}
-.feature{
-    float: left;
-    padding: 10px;
-    width: 200px;
-}
-
 @media screen and (max-width: 500px){
     .grid{
         flex-direction: column;
@@ -81,4 +82,5 @@ nav a{
         padding: 20px;
         position: relative;
         max-width: 500px;
+    }
 }
