--- a/css/hu-wa6.css
+++ b/css/hu-wa6.css
@@ -36,6 +36,10 @@
     nav{
         background-color: #000;
         padding: .5em;
+        position: sticky;
+        top: 0px;
+        left: 0px;
+        overflow: hidden; 
     }
     nav ul{
         margin: 0;
