--- a/css/hu-wa7.css
+++ b/css/hu-wa7.css
@@ -26,6 +26,7 @@ body{
 nav{
     position: absolute;
     top: 240px;
+    border-radius: 10px;
     height: 50vh;
     padding: 10px;
     display: flex;
@@ -44,13 +45,23 @@ nav a{
 nav a:hover, nav a:focus{
     background-color: #FADBE4;
     color: #485665;
+    border-radius: 10px;
 }
 #flower img{
+    top: 400px;
     position: relative;
-    top: 300px;
-    padding: 50px;
-    width: 45vw;
-    height: auto;
+    border-radius: 10px;
+    width: 30vh;
+}
+#flower #top{
+    display: none;
+    position: absolute;
+}
+#flower:hover #top{
+    display: block; 
+}
+#flower:hover #bottom{
+    opacity: 0; 
 }
 #pink-ball{
     background-color: #FADBE4;
@@ -59,5 +70,14 @@ nav a:hover, nav a:focus{
     border-radius: 50%;
     position: absolute;
     left: 5vw;
-    top:0;
+    bottom: 10vh;
+    animation: ballmove 3s ease-in-out 1s infinite alternate;
+    transition: width 1s, height 1s;FIX
+}
+@keyframes ballmove{
+    0%{right:90%;}
+    25%{width:50px;height:50px;}
+    50%{width:30px;height:30px;}
+    75%{width:50px;height:50px;}
+    100%{left:90%;}
 }
