--- a/css/hu-wa7.css
+++ b/css/hu-wa7.css
@@ -72,12 +72,11 @@ nav a:hover, nav a:focus{
     left: 5vw;
     bottom: 10vh;
     animation: ballmove 3s ease-in-out 1s infinite alternate;
-    transition: width 1s, height 1s;FIX
 }
 @keyframes ballmove{
     0%{right:90%;}
-    25%{width:50px;height:50px;}
-    50%{width:30px;height:30px;}
-    75%{width:50px;height:50px;}
-    100%{left:90%;}
+    25%{width:50px;height:50px;background-color:aliceblue;}
+    50%{width:30px;height:30px;background-color:#FADBE4}
+    75%{width:50px;height:50px;background-color:aliceblue;}
+    100%{left:90%;background-color:#FADBE4}
 }
